# madnick

./: .gitignore  LICENSE  README.md  lmc.code  pyproject.toml
src/lmc/: assembler.py  lmc.py  test_add_sub.py  test_complement.py  vm.py
test/: test_add_sub.py  test_complement.py
