[project]
name = "madnick"
version = "0.1.0"
description = "Assembler and runner for Dr. Madnicks Little Man Computer (LMC)"
requires-python = ">=3.14"
dependencies = [
    "lark>=1.3.1",
    "rich>=14.2.0",
    "textual==8.0.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "textual-dev>=1.8.0",
]

[project.scripts]
lmc = "lmc.lmc:app"